apps/base/oura-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oura-collector
  namespace: oura-collector
spec:
  selector:
    app: oura-collector
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: health  type: ClusterIP
