apps/base/oura-collector/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oura-collector
  namespace: oura-collector
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  rules:
  - host: oura-collector.landryzetam.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oura-collector
            port:
              number: 8000
  tls:
  - hosts:
    - oura-collector.landryzetam.net
    secretName: oura-collector-tls-cert
